--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.0.0",
+    "codemirror": "^5.35.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.12.9",
     "react": "^16.2.0",
+    "react-codemirror2": "^4.1.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "react-draggable": "^3.0.5",
+    "react-scripts": "1.1.1",
+    "sql.js": "^0.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
