--- a/package.json
+++ b/package.json
@@ -3,25 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "https://joshualicense.github.io/react-testsql",
+  "proxy": "http://localhost:3001/",
   "dependencies": {
-    "bootstrap": "^4.0.0",
-    "codemirror": "^5.35.0",
-    "gh-pages": "^1.1.0",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.12.9",
-    "react": "^16.2.0",
-    "react-codemirror2": "^4.1.0",
-    "react-dom": "^16.2.0",
-    "react-draggable": "^3.0.5",
-    "react-scripts": "1.1.1",
-    "sql.js": "^0.5.0"
+    "bcrypt-nodejs": "^0.0.3",
+    "body-parser": "^1.18.2",
+    "connect-mongo": "^2.0.1",
+    "crypto": "^1.0.1",
+    "dotenv": "^5.0.1",
+    "errorhandler": "^1.5.0",
+    "express": "4.13.3",
+    "express-session": "^1.15.6",
+    "express-validator": "^5.0.3",
+    "mongoose": "^5.0.10",
+    "multer": "^1.3.0",
+    "nodemon": "^1.17.2",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^1.0.0",
+    "passport-local": "^1.0.0"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "server": "nodemon server.js",
+    "client": "node start-client.js"
+  },
+  "devDependencies": {
+    "concurrently": "3.1.0",
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0"
   }
 }
