--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "4.13.3",
     "express-session": "^1.15.6",
     "express-validator": "^5.0.3",
+    "glob": "^7.1.2",
     "mongoose": "^5.0.10",
     "multer": "^1.3.0",
     "nodemon": "^1.17.2",
