--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,6 @@ cache:
     - node_modules
     - client/node_modules
 script:
-  - cd client && yarn build
+  - cd client
+  - yarn build
   - yarn test
