--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ cache:
   directories:
     - node_modules
     - client/node_modules
-script:
+before_install:
   - cd client
+script:
   - yarn build
   - yarn test
