--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 language: node_js
 node_js:
-  - 6
+  - 8
+  - 9
 cache:
   directories:
     - node_modules
+    - client/node_modules
+before_install:
+  - cd client
 script:
-  - npm run build
-  - npm test
+  - yarn build
+  - yarn test
