--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
-    "sql.js": "^0.5.0"
+    "sql.js": "^0.5.0",
+    "typeface-roboto": "^0.0.54"
   },
   "scripts": {
     "predeploy": "npm run build",
