--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "https://joshualicense.github.io/react-testsql",
+  "proxy": "http://localhost:3001/",
   "dependencies": {
     "codemirror": "^5.35.0",
     "gh-pages": "^1.1.0",
