--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "glob": "^7.1.2",
     "mongoose": "^5.0.10",
     "multer": "^1.3.0",
-    "nodemon": "^1.17.2",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
@@ -26,9 +25,11 @@
   "scripts": {
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "server": "nodemon server.js",
-    "client": "node start-client.js"
+    "client": "node start-client.js",
+    "heroku-postbuild": "cd client && yarn install --production && yarn build"
   },
   "devDependencies": {
+    "nodemon": "^1.17.2",
     "concurrently": "3.1.0",
     "eslint": "^4.9.0",
     "eslint-config-airbnb": "^16.1.0",
