--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "client": "node start-client.js",
     "heroku-postbuild": "cd client && yarn install --production && yarn build"
   },
+  "cacheDirectories": ["node_modules", "client/node_modules"],
   "devDependencies": {
     "nodemon": "^1.17.2",
     "concurrently": "3.1.0",
