--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-testsql",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "private": true,
   "homepage": "https://joshualicense.github.io/react-testsql",
   "proxy": "http://localhost:3001/",
@@ -28,14 +28,17 @@
     "client": "node start-client.js",
     "heroku-postbuild": "cd client && yarn install --production && yarn build"
   },
-  "cacheDirectories": ["node_modules", "client/node_modules"],
+  "cacheDirectories": [
+    "node_modules",
+    "client/node_modules"
+  ],
   "devDependencies": {
-    "nodemon": "^1.17.2",
     "concurrently": "3.1.0",
     "eslint": "^4.9.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0"
+    "eslint-plugin-react": "^7.7.0",
+    "nodemon": "^1.17.2"
   }
 }
