--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.15.6",
     "express-validator": "^5.0.3",
     "glob": "^7.1.2",
+    "markdown-to-jsx": "^6.6.3",
     "mongoose": "^5.0.10",
     "multer": "^1.3.0",
     "passport": "^0.4.0",
