--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
     "sql.js": "^0.5.0",
+    "markdown-to-jsx": "^6.6.3",
     "typeface-roboto": "^0.0.54",
     "why-did-you-update": "^0.1.1"
   },
