--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react": "^16.3.0",
     "react-codemirror2": "^4.1.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "react-draggable": "^3.0.5",
     "react-scripts": "1.1.1",
     "sql.js": "^0.5.0",
