--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
-    "passport-local": "^1.0.0",
-    "react-router-dom": "^4.2.2"
+    "passport-local": "^1.0.0"
   },
   "scripts": {
     "start": "concurrently \"yarn server\" \"yarn client\"",
