--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react": "^16.3.0",
     "react-codemirror2": "^4.1.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "react-draggable": "^3.0.5",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.1",
