--- a/client/package.json
+++ b/client/package.json
@@ -5,23 +5,21 @@
   "homepage": ".",
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "@material-ui/codemod": "^1.0.0",
+    "@material-ui/core": "^1.0.0",
+    "@material-ui/icons": "^1.0.0",
     "codemirror": "^5.35.0",
     "gh-pages": "^1.1.0",
-    "material-ui": "^1.0.0-beta.38",
-    "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.3.0",
     "react-codemirror2": "^4.1.0",
     "react-dom": "^16.2.0",
     "react-draggable": "^3.0.5",
-    "react-redux": "^5.0.7",
     "react-scripts": "1.1.1",
-    "redux": "^3.7.2",
     "sql.js": "^0.5.0",
-    "typeface-roboto": "^0.0.54",
-    "why-did-you-update": "^0.1.1"
+    "typeface-roboto": "^0.0.54"
   },
   "scripts": {
-    "predeploy": "npm run build",
+    "predeploy": "yarn build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
