Alter question construction (#67)
* Add two new question helper functions

getRandomOperator and getRandomConjunction to help constructing questions.

* Replace question construction method

* Add helper to get a random element from an array

* Add ability to add Markdown to a question

* Reformat questions object

Allows easier cherry-picking and improved readability of the questions.

* Move buildQuestion to helpers file

It had no reason to be within the main component.

* Correct dependancies

--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-draggable": "^3.0.5",
     "react-scripts": "1.1.1",
     "sql.js": "^0.5.0",
+    "markdown-to-jsx": "^6.6.3",
     "typeface-roboto": "^0.0.54"
   },
   "scripts": {
