--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-testsql",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "private": true,
   "homepage": ".",
   "proxy": "http://localhost:3001/",
@@ -10,13 +10,14 @@
     "@material-ui/icons": "^1.0.0",
     "codemirror": "^5.35.0",
     "gh-pages": "^1.1.0",
+    "markdown-to-jsx": "^6.6.3",
     "react": "^16.3.0",
     "react-codemirror2": "^4.1.0",
     "react-dom": "^16.2.0",
     "react-draggable": "^3.0.5",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "sql.js": "^0.5.0",
-    "markdown-to-jsx": "^6.6.3",
     "typeface-roboto": "^0.0.54"
   },
   "scripts": {
