--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,9 @@
     "codemirror": "^5.35.0",
     "gh-pages": "^1.1.0",
     "markdown-to-jsx": "^6.6.3",
-    "react": "^16.3.0",
+    "react": "16.4.0",
     "react-codemirror2": "^4.1.0",
-    "react-dom": "^16.2.0",
+    "react-dom": "16.4.0",
     "react-draggable": "^3.0.5",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
