Add additional helpful scripts into package.json
"install-all" to install all dependancies in all directories (root & client/).

"test" to test all available test scripts (currently all tests are in /client/).

--- a/package.json
+++ b/package.json
@@ -26,12 +26,11 @@
     "start": "concurrently \"yarn server\" \"yarn client\"",
     "server": "nodemon server.js",
     "client": "node start-client.js",
+    "install-all": "yarn install && cd client && yarn install",
+    "test": "cd client && yarn test",
     "heroku-postbuild": "cd client && yarn install --production && yarn build"
   },
-  "cacheDirectories": [
-    "node_modules",
-    "client/node_modules"
-  ],
+  "cacheDirectories": ["node_modules", "client/node_modules"],
   "devDependencies": {
     "concurrently": "3.1.0",
     "eslint": "^4.9.0",
