--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-codemirror2": "^4.1.0",
     "react-dom": "16.4.0",
     "react-draggable": "^3.0.5",
+    "react-loadable": "^5.4.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "sql.js": "^0.5.0",
