--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "test": "cd client && yarn test",
     "heroku-postbuild": "cd client && yarn install --production && yarn build"
   },
-  "cacheDirectories": ["node_modules", "client/node_modules"],
+  "cacheDirectories": [
+    "node_modules",
+    "client/node_modules"
+  ],
   "devDependencies": {
     "concurrently": "3.1.0",
     "eslint": "^4.9.0",
