--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "body-parser": "^1.18.2",
     "connect-mongo": "^2.0.1",
     "crypto": "^1.0.1",
-    "dotenv": "^5.0.1",
+    "dotenv": "^6.0.0",
     "errorhandler": "^1.5.0",
     "express": "4.13.3",
     "express-session": "^1.15.6",
@@ -35,7 +35,7 @@
     "client/node_modules"
   ],
   "devDependencies": {
-    "concurrently": "3.1.0",
+    "concurrently": "^3.5.1",
     "eslint": "^4.9.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
