[Config] Exclude index.js file from tests
The index.js file is the built from CRA (I trust CRA a little...)

--- a/client/package.json
+++ b/client/package.json
@@ -37,7 +37,8 @@
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}",
       "!src/registerServiceWorker.js",
-      "!src/setupTests.js"
+      "!src/setupTests.js",
+      "!src/index.js"
     ]
   }
 }
