--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@material-ui/icons": "^1.0.0",
     "codemirror": "^5.35.0",
     "gh-pages": "^1.1.0",
+    "lodash": "^4.17.10",
     "markdown-to-jsx": "^6.6.3",
     "react": "16.4.0",
     "react-codemirror2": "^5.0.4",
