--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,8 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.1.11",
+    "@types/jest": "^23.1.3",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "react-test-renderer": "^16.4.0"
