--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@material-ui/codemod": "^1.0.0",
     "@material-ui/core": "^1.0.0",
     "@material-ui/icons": "^1.0.0",
+    "classnames": "^2.2.6",
     "codemirror": "^5.35.0",
     "gh-pages": "^1.1.0",
     "lodash": "^4.17.10",
