--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@material-ui/icons": "^1.0.0",
     "classnames": "^2.2.6",
     "codemirror": "^5.35.0",
+    "file-saver": "^1.3.8",
     "gh-pages": "^1.1.0",
     "lodash": "^4.17.10",
     "markdown-to-jsx": "^6.6.3",
