--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "client/node_modules"
   ],
   "devDependencies": {
+    "@types/enzyme": "^3.1.11",
+    "@types/jest": "^23.1.4",
     "concurrently": "^3.5.1",
     "eslint": "^4.9.0",
     "eslint-config-airbnb": "^16.1.0",
