--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
     "react-dom": "16.4.0",
     "react-loadable": "^5.4.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "2.0.0-next.3e165448",
+    "react-scripts": "^1.1.4",
     "sql.js": "^0.5.0",
     "typeface-roboto": "^0.0.54"
   },
@@ -44,6 +44,18 @@
       "!src/registerServiceWorker.js",
       "!src/setupTests.js",
       "!src/index.js"
+    ]
+  },
+  "browserslist": {
+    "development": [
+      "last 2 chrome versions",
+      "last 2 firefox versions",
+      "last 2 edge versions"
+    ],
+    "production": [
+      ">0.25%",
+      "not op_mini all",
+      "ie 11"
     ]
   }
 }
