--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-testsql",
+  "name": "@react-testsql/client",
   "version": "0.9.0",
   "private": true,
   "homepage": ".",
@@ -32,8 +32,6 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "@types/enzyme": "^3.1.11",
-    "@types/jest": "^23.1.3",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "react-test-renderer": "^16.4.0"
