--- a/package.json
+++ b/package.json
@@ -1,49 +1,38 @@
 {
   "name": "react-testsql",
-  "version": "0.9.0",
   "private": true,
+  "author": "Joshua License",
+  "version": "0.9.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/JoshuaLicense/react-testsql.git"
+  },
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/JoshuaLicense/react-testsql/issues"
+  },
   "homepage": "https://joshualicense.github.io/react-testsql",
   "proxy": "http://localhost:3001/",
-  "dependencies": {
-    "bcrypt-nodejs": "^0.0.3",
-    "body-parser": "^1.18.2",
-    "connect-mongo": "^2.0.1",
-    "crypto": "^1.0.1",
-    "dotenv": "^6.0.0",
-    "errorhandler": "^1.5.0",
-    "express": "4.13.3",
-    "express-session": "^1.15.6",
-    "express-validator": "^5.0.3",
-    "glob": "^7.1.2",
-    "mongoose": "^5.0.10",
-    "multer": "^1.3.0",
-    "passport": "^0.4.0",
-    "passport-facebook": "^2.1.1",
-    "passport-google-oauth": "^1.0.0",
-    "passport-local": "^1.0.0"
-  },
+  "main": "server/index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "cd server && yarn start",
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
-    "server": "nodemon server.js",
+    "server": "cd server && yarn start-dev",
     "client": "cd client && yarn start",
-    "install-all": "yarn install && cd client && yarn install",
     "test": "cd client && yarn test",
     "heroku-postbuild": "cd client && yarn install --production && yarn build"
   },
   "cacheDirectories": [
-    "node_modules",
+    "server/node_modules",
     "client/node_modules"
   ],
   "devDependencies": {
     "@types/enzyme": "^3.1.11",
     "@types/jest": "^23.1.4",
-    "concurrently": "^3.5.1",
-    "eslint": "^4.9.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
-    "nodemon": "^1.17.2"
-  }
+    "concurrently": "^3.5.1"
+  },
+  "workspaces": [
+    "client",
+    "server"
+  ]
 }
