--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,9 @@
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0"
   },
+  "peerDependencies": {
+    "@react-testsql/client": "^0.9.0"
+  },
   "scripts": {
     "start": "node index.js",
     "start-dev": "nodemon index.js"
