--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ cache:
   directories:
     - node_modules
     - client/node_modules
+    - server/node_modules
 before_install:
   - cd client
 script:
