--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,11 @@ cache:
   directories:
     - node_modules
     - client/node_modules
+    - server/node_modules
 before_install:
-  - cd client
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.9.4
+  - export PATH="$HOME/.yarn/bin:$PATH"
 script:
+  - cd client
   - yarn build
   - yarn test
