--- a/client/package.json
+++ b/client/package.json
@@ -5,18 +5,17 @@
   "homepage": ".",
   "proxy": "http://localhost:3001/",
   "dependencies": {
-    "@material-ui/codemod": "^1.0.0",
-    "@material-ui/core": "^1.0.0",
-    "@material-ui/icons": "^1.0.0",
+    "@material-ui/core": "^3.0.0",
+    "@material-ui/icons": "^3.0.0",
     "classnames": "^2.2.6",
     "codemirror": "^5.35.0",
     "file-saver": "^1.3.8",
     "gh-pages": "^1.1.0",
     "lodash": "^4.17.10",
     "markdown-to-jsx": "^6.6.3",
-    "react": "16.4.0",
+    "react": "^16.3.2",
     "react-codemirror2": "^5.0.4",
-    "react-dom": "16.4.0",
+    "react-dom": "^16.3.2",
     "react-loadable": "^5.4.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.1.4",
