--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^6.0.0",
     "errorhandler": "^1.5.0",
-    "express": "4.13.3",
+    "express": "^4.13.3",
     "express-session": "^1.15.6",
     "express-validator": "^5.0.3",
     "glob": "^7.1.2",
@@ -23,7 +23,7 @@
     "passport-local": "^1.0.0"
   },
   "peerDependencies": {
-    "@react-testsql/client": "^0.9.0"
+    "@react-testsql/client": "^0.10.0"
   },
   "scripts": {
     "start": "node index.js",
@@ -34,11 +34,6 @@
     "client/node_modules"
   ],
   "devDependencies": {
-    "eslint": "^4.9.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
     "nodemon": "^1.17.2"
   }
 }
