--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "file-saver": "^1.3.8",
     "gh-pages": "^1.1.0",
     "lodash": "^4.17.10",
-    "markdown-to-jsx": "^6.6.3",
+    "marked": "^0.5.0",
     "react": "^16.3.2",
     "react-codemirror2": "^5.0.4",
     "react-dom": "^16.3.2",
