--- a/client/package.json
+++ b/client/package.json
@@ -8,13 +8,12 @@
     "@material-ui/core": "^3.0.0",
     "@material-ui/icons": "^3.0.0",
     "classnames": "^2.2.6",
-    "codemirror": "^5.35.0",
     "file-saver": "^1.3.8",
     "gh-pages": "^1.1.0",
     "lodash": "^4.17.10",
     "marked": "^0.5.0",
     "react": "^16.3.2",
-    "react-codemirror2": "^5.0.4",
+    "react-ace": "^6.2.0",
     "react-dom": "^16.3.2",
     "react-loadable": "^5.4.0",
     "react-router-dom": "^4.2.2",
