[Core] Fix MongoDB deprecation warnings

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb://admin:admin@ds113849.mlab.com:13849/testsql
+MONGODB_URI=mongodb://localhost:27017/test
 
 SESSION_SECRET=Your Session Secret goes here
 
