--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-loadable": "^5.4.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.1.4",
+    "recharts": "^1.3.1",
     "sql.js": "^0.5.0",
     "typeface-roboto": "^0.0.54"
   },
