--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "build": "cd client && yarn build",
     "clean": "cd server && shx rm -rf build",
     "move": "cd client && shx mv build ../server",
-    "predeploy": "yarn build",
     "heroku-postbuild": "cd client && yarn install --production && yarn build"
   },
   "cacheDirectories": [
+    "node_modules",
     "server/node_modules",
     "client/node_modules"
   ],
@@ -39,5 +39,9 @@
   "workspaces": [
     "client",
     "server"
-  ]
+  ],
+  "engines": {
+    "node": ">=8.11.3",
+    "npm": ">=5.6.0"
+  }
 }
