--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   "scripts": {
     "start": "node server/index.js",
     "start:dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
-    "start:server": "cd server && yarn start-dev",
+    "start:server": "cd server && yarn start:dev",
     "start:client": "cd client && yarn start",
     "build": "cd client && yarn build",
     "build:client": "cross-env REACT_APP_CLIENT_ONLY=true yarn build",
     "test": "cd client && yarn test",
+    "deploy:gh-pages": "cd client && yarn deploy",
+    "deploy:heroku": "git push heroku master",
     "heroku-postbuild": "cd client && yarn install --production && yarn build"
   },
   "cacheDirectories": [
