--- a/client/package.json
+++ b/client/package.json
@@ -19,12 +19,13 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.1.4",
     "recharts": "^1.3.1",
-    "sql.js": "^0.5.0",
+    "sql.js": "^1.0.0",
     "typeface-roboto": "^0.0.54"
   },
   "scripts": {
     "predeploy": "cross-env REACT_APP_CLIENT_ONLY=true PUBLIC_URL=https://joshualicense.github.io/react-testsql/ yarn build",
     "deploy": "gh-pages -d build",
+    "prestart": "copy \"..\\node_modules\\sql.js\\dist\\sql-wasm.wasm\" \"public/sql-wasm.wasm\"",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
