--- a/client/package.json
+++ b/client/package.json
@@ -8,15 +8,15 @@
     "@material-ui/core": "^3.0.0",
     "@material-ui/icons": "^3.0.0",
     "classnames": "^2.2.6",
-    "file-saver": "^1.3.8",
-    "gh-pages": "^1.1.0",
+    "file-saver": "^2.0.2",
+    "gh-pages": "^2.1.1",
     "lodash": "^4.17.10",
     "marked": "^0.5.0",
     "react": "^16.3.2",
     "react-ace": "^6.2.0",
     "react-dom": "^16.3.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^1.1.4",
+    "react-scripts": "^3.0.0",
     "recharts": "^1.3.1",
     "sql.js": "^1.0.0",
     "typeface-roboto": "^0.0.54"
@@ -27,7 +27,7 @@
     "prestart": "copy \"..\\node_modules\\sql.js\\dist\\sql-wasm.wasm\" \"public/sql-wasm.wasm\"",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
