--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,8 @@
     "crypto": "^1.0.1",
     "dotenv": "^6.0.0",
     "errorhandler": "^1.5.0",
-    "express": "^4.13.3",
-    "express-session": "^1.15.6",
+    "express": "^4.17",
+    "express-session": "^1.17",
     "express-validator": "^5.0.3",
     "glob": "^7.1.2",
     "mongoose": "^5.0.10",
@@ -22,10 +22,8 @@
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
-    "passport-local": "^1.0.0"
-  },
-  "peerDependencies": {
-    "@react-testsql/client": "^0.10.0"
+    "passport-local": "^1.0.0",
+    "@react-testsql/client": "^0.12.0"
   },
   "scripts": {
     "start": "node index.js",
