--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "server"
   ],
   "engines": {
-    "node": ">=8.11.3",
-    "npm": ">=5.6.0",
-    "yarn": ">=1.9.4"
+    "node": "^8.10.0 || ^10.13.0 || >= 11.10.1",
+    "npm": "^6.3.1",
+    "yarn": "^1.13.0"
   }
 }
