--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   ],
   "engines": {
     "node": "^8.10.0 || ^10.13.0 || >= 11.10.1",
-    "npm": "^6.3.1",
-    "yarn": "^1.13.0"
+    "npm": "~6",
+    "yarn": "~1"
   }
 }
